Archive2/1a/92f538e1eeb396/output
main.cpp:1:1: error: unknown type name 'http'
http://stackoverflow.com/questions/15858141/conveniently-declaring-compile-time-strings-in-c
^
main.cpp:1:5: error: expected unqualified-id
http://stackoverflow.com/questions/15858141/conveniently-declaring-compile-time-strings-in-c
    ^
2 errors generated.
